infra/deploy-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-backend
  template:
    metadata:
      labels:
        app: sample-backend
    spec:
      containers:
        - name: sample-backend
          image: quay.io/mario_rubio/sample-backend:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "180Mi"
              cpu: "10m"
          livenessProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/actuator/health/readiness
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: sample-backend-svc
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: sample-backend
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  to:
    kind: Service
    name: sample-backend-svc
  port:
    targetPort: 8081
  tls:
    termination: edge
