infra/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-frontend
  template:
    metadata:
      labels:
        app: sample-frontend
    spec:
      containers:
        - name: sample-frontend
          image: quay.io/mario_rubio/sample-frontend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: sample-frontend-svc
spec:
  selector:
    app: sample-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  to:
    kind: Service
    name: sample-frontend-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
